--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ tensorboard==2.5.0
 pandas==1.2.4
 matplotlib==3.4.1
 ruamel.yaml==0.17.4
-gym[atari]==0.17.0
 moviepy==1.0.3
 einops==0.3.0
 protobuf==3.20.0
+gym==0.19.0
 dm_control==1.0.9
