--- a/configs.yaml
+++ b/configs.yaml
@@ -148,9 +148,26 @@ atari100k:
   imag_gradient: 'reinforce'
   time_limit: 108000
 
+mazed:
+  task: "memmaze_9_9"
+  steps: 5e4
+  action_repeat: 2
+
 debug:
   debug: True
   pretrain: 1
   prefill: 1
   batch_size: 10
   batch_length: 20
+
+mazegym:
+  #task: "memory_maze:MemoryMaze-9x9-v0"
+  steps: 5e4
+  action_repeat: 2
+
+mazedeepm:
+  task: "memmaze_9_9"
+  steps: 5e4
+  action_repeat: 2
+
+
