--- a/configs.yaml
+++ b/configs.yaml
@@ -25,7 +25,7 @@ defaults:
   action_repeat: 2
   time_limit: 1000
   grayscale: False
-  prefill: 2500
+  prefill: 250 #0
   eval_noise: 0.0
   reward_EMA: True
 
