--- a/configs.yaml
+++ b/configs.yaml
@@ -25,7 +25,7 @@ defaults:
   action_repeat: 2
   time_limit: 1000
   grayscale: False
-  prefill: 250 #0
+  prefill: 3500
   eval_noise: 0.0
   reward_EMA: True
 
@@ -150,7 +150,7 @@ atari100k:
 
 mazed:
   task: "memmaze_9_9"
-  steps: 5e4
+  steps: 1e6
   action_repeat: 2
 
 debug:
@@ -162,12 +162,12 @@ debug:
 
 mazegym:
   #task: "memory_maze:MemoryMaze-9x9-v0"
-  steps: 5e4
+  steps: 1e6
   action_repeat: 2
 
 mazedeepm:
   task: "memmaze_9_9"
-  steps: 5e4
+  steps: 1e6
   action_repeat: 2
 
 
