--- a/configs.yaml
+++ b/configs.yaml
@@ -120,22 +120,27 @@ defaults:
   disag_units: 400
   disag_action_cond: False
 
-dmc_vision:
-  steps: 1e6
-  train_ratio: 512
-  video_pred_log: true
-  encoder: {mlp_keys: '$^', cnn_keys: 'image'}
-  decoder: {mlp_keys: '$^', cnn_keys: 'image'}
-
 dmc_proprio:
   steps: 5e5
+  action_repeat: 2
+  envs: 4
   train_ratio: 512
   video_pred_log: false
   encoder: {mlp_keys: '.*', cnn_keys: '$^'}
   decoder: {mlp_keys: '.*', cnn_keys: '$^'}
 
+dmc_vision:
+  steps: 1e6
+  action_repeat: 2
+  envs: 4
+  train_ratio: 512
+  video_pred_log: true
+  encoder: {mlp_keys: '$^', cnn_keys: 'image'}
+  decoder: {mlp_keys: '$^', cnn_keys: 'image'}
+
 atari100k:
   steps: 4e5
+  envs: 1
   action_repeat: 4
   eval_episode_num: 100
   stickey: False
