--- a/configs.yaml
+++ b/configs.yaml
@@ -156,8 +156,10 @@ debug:
   batch_size: 10
   batch_length: 20
 
-mazegym:
-  task: '9'
+MemoryMaze:
+  actor_dist: 'onehot'
+  imag_gradient: 'reinforce'
+  task: '9x9'
   steps: 1e6
   action_repeat: 2
 
