modified config for MemoryMaze

--- a/configs.yaml
+++ b/configs.yaml
@@ -181,11 +181,11 @@ debug:
   batch_length: 20
 
 MemoryMaze:
-  actor_dist: 'onehot'
-  imag_gradient: 'reinforce'
-  task: '9x9'
   steps: 1e6
   action_repeat: 2
+  actor_dist: 'onehot'
+  imag_gradient: 'reinforce'
+  task: 'MemoryMaze_9x9'
 
 
 
