--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
+setuptools==60.0.0
 torch==2.0.0
 torchvision==0.15.1
 numpy==1.20.1
 tensorboard==2.5.0
 pandas==1.2.4
-matplotlib==3.4.1
+matplotlib==3.5.0
 ruamel.yaml==0.17.4
 moviepy==1.0.3
 einops==0.3.0
 protobuf==3.20.0
 gym==0.19.0
 dm_control==1.0.9
-scipy==scipy==1.9.0
+scipy==1.7.0
+memory_maze
