--- a/configs.yaml
+++ b/configs.yaml
@@ -188,5 +188,12 @@ MemoryMaze:
   task: 'MemoryMaze_9x9'
 
 
-
+MemoryMazeStpn:
+  dyn_deter: 64
+  dyn_cell: 'stpn'
+  steps: 1e6
+  action_repeat: 2
+  actor_dist: 'onehot'
+  imag_gradient: 'reinforce'
+  task: 'MemoryMaze_9x9'
 
