--- a/configs.yaml
+++ b/configs.yaml
@@ -69,7 +69,7 @@ defaults:
 
   # Training
   batch_size: 16
-  batch_length: 16
+  batch_length: 64
   train_ratio: 512
   pretrain: 100
   model_lr: 1e-4
@@ -199,3 +199,16 @@ MemoryMazeStpn:
   imag_gradient: 'reinforce'
   task: 'MemoryMaze_9x9'
 
+MemoryMazeStpnDebug:
+  prefill: 10
+  batch_size: 10
+  batch_length: 20
+  eval_episode_num: 1
+  dyn_hidden: 64 #same deter ???
+  dyn_deter: 64
+  dyn_cell: 'stpn'
+  steps: 1e6
+  action_repeat: 2
+  actor_dist: 'onehot'
+  imag_gradient: 'reinforce'
+  task: 'MemoryMaze_9x9'
