--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ protobuf==3.20.0
 gym==0.19.0
 dm_control==1.0.9
 scipy==1.7.0
-memory_maze
+memory_maze==1.0.2
 atari-py==0.2.9
-opencv-python
+crafter==1.8.0
+opencv-python==4.7.0.72
