--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 setuptools==60.0.0
 torch==2.0.0
 torchvision==0.15.1
-numpy==1.20.1
-tensorboard==2.5.0
+tensorboard==2.10.0
 pandas==1.2.4
 matplotlib==3.5.0
 ruamel.yaml==0.17.4
@@ -11,8 +10,12 @@ einops==0.3.0
 protobuf==3.20.0
 gym==0.19.0
 dm_control==1.0.9
-scipy==1.7.0
+scipy==1.8.0
 memory_maze==1.0.2
 atari-py==0.2.9
 crafter==1.8.0
 opencv-python==4.7.0.72
+numpy==1.21.0
+# minerl==0.4.4
+# This was needed for minerl
+# conda install -c conda-forge openjdk=8
