--- a/configs.yaml
+++ b/configs.yaml
@@ -161,25 +161,37 @@ atari100k:
   steps: 4e5
   envs: 1
   action_repeat: 4
+  train_ratio: 1024
+  video_pred_log: true
   eval_episode_num: 100
+  actor_dist: 'onehot'
+  imag_gradient: 'reinforce'
   stickey: False
   lives: unused
   noops: 30
   resize: opencv
   actions: needed
-  actor_dist: 'onehot'
-  train_ratio: 1024
-  imag_gradient: 'reinforce'
   time_limit: 108000
 
 minecraft:
   task: minecraft_diamond
-  break_speed: 100.0
+  step: 1e8
   envs: 16
+  action_repeat: 1
   train_ratio: 16
-  log_keys_max: '^log_inventory.*'
-  encoder: {mlp_keys: 'inventory|inventory_max|equipped|health|hunger|breath|reward', cnn_keys: 'image'}
-  decoder: {mlp_keys: 'inventory|inventory_max|equipped|health|hunger|breath', cnn_keys: 'image'}
+  video_pred_log: true
+  dyn_hidden: 1024
+  dyn_deter: 4096
+  units: 1024
+  reward_layers: 5
+  cont_layers: 5
+  value_layers: 5
+  actor_layers: 5
+  encoder: {mlp_keys: 'inventory|inventory_max|equipped|health|hunger|breath|reward', cnn_keys: 'image', cnn_depth: 96, mlp_layers: 5, mlp_units: 1024}
+  decoder: {mlp_keys: 'inventory|inventory_max|equipped|health|hunger|breath', cnn_keys: 'image', cnn_depth: 96, mlp_layers: 5, mlp_units: 1024}
+  actor_dist: 'onehot'
+  imag_gradient: 'reinforce'
+  break_speed: 100.0
   time_limit: 36000
 
 debug:
