--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,14 @@
-setuptools==60.0.0
-torch==2.0.0
-torchvision==0.15.1
-pandas==1.2.4
+torch==2.4.1
 matplotlib==3.5.0
 ruamel.yaml==0.17.4
 moviepy==1.0.3
 einops==0.3.0
 protobuf==3.20.0
-gym==0.19.0
+gym==0.22.0
 mujoco==2.3.5
 dm_control==1.0.9
-scipy==1.8.0
 memory_maze==1.0.3
-atari-py==0.2.9
 crafter==1.8.0
 opencv-python==4.7.0.72
-numpy==1.21.0
-tensorboard
-# minerl==0.4.4
-# This was needed for minerl
-# conda install -c conda-forge openjdk=8
+numpy==1.23.5
+tensorboard==2.17.1
