--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
+gym[atari,accept-rom-license]==0.22.0
 torch==2.4.1
 matplotlib==3.5.0
 ruamel.yaml==0.17.4
 moviepy==1.0.3
 einops==0.3.0
 protobuf==3.20.0
-gym==0.22.0
 mujoco==2.3.5
 dm_control==1.0.9
 memory_maze==1.0.3
